--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
                             <img src="Images/casestudy.jpg">
                             <div>
                             <h4>Redfiners</h4>
-                            <button>View project</button>
+                            <a href="https://isroll.github.io/UX_UI_HW_20/">
+                                <button>View project</button>
+                            </a>
                         </div>
                         </div>
                         
